--- a/pages/home.html
+++ b/pages/home.html
@@ -6,12 +6,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js"></script>
+        <script type="text/javascript" src="../assets/js/doT.js"></script>
+        <script type="text/javascript" src="../assets/js/site.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
 </head> 
 <body> 
 
-<div data-role="page" data-theme="b">
+<div data-role="page" data-theme="b" id="home">
         <div data-role="header" data-theme="b">
             <h1>My Site</h1>
         </div>
@@ -20,14 +22,12 @@
             <a href="index.html" >Local</a>
             <a href="index.html" >My Plan</a>
             <a href="index.html" >Checklist</a>
-            <a href="index.html" >Info</a>
-                                                
-          
+            <a href="index.html" >Info</a>                                      
         </div>
         <div data-role="footer" data-position="fixed">
             <h1>&copy; Copyright Info or Site URL</h1>
         </div>
-    </div>
+</div>
 
 </body>
 </html>
