--- a/pages/Info.html
+++ b/pages/Info.html
@@ -1,11 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-        <title>Untitled Document</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js">
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js">
+        </script>
+        <script type="text/javascript" src="../assets/js/doT.js">
+        </script>
+        <script type="text/javascript" src="../assets/js/site.js">
         </script>
         <script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js">
         </script>
@@ -15,15 +17,14 @@
             <div data-role="header">
                 <h1>Williamson County Emergency Notification</h1>
             </div>
-            <!-- /header -->
             <div data-role="content">
                 <p>
                     <ul data-role="listview" data-inset="true" data-filter="true">
                         <li>
-                            <a href="About.html">About</a>
+                            <a href="about.html">About</a>
                         </li>
                         <li>
-                            <a href="Contact.html">Contact</a>
+                            <a href="contact.html">Contact</a>
                         </li>
                         <li>
                             <a href="#">Get Ready Blog</a>
@@ -34,12 +35,14 @@
                         <li>
                             <a href="#">Twitter</a>
                         </li>
-						<li>
+                        <li>
                             <a href="#">News</a>
-                        </li>						
+                        </li>
                     </ul>
                 </p>
-            </div><!-- /content -->
-        </div><!-- /page -->
+            </div>
+            <!-- /content -->
+        </div>
+        <!-- /page -->
     </body>
 </html>
