--- a/pages/home.html
+++ b/pages/home.html
@@ -22,7 +22,7 @@
             <a href="index.html" >Local</a>
             <a href="index.html" >My Plan</a>
             <a href="index.html" >Checklist</a>
-            <a href="index.html" >Info</a>                                      
+            <a href="info.html" >Info</a>                                      
         </div>
         <div data-role="footer" data-position="fixed">
             <h1>&copy; Copyright Info or Site URL</h1>
