--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -1,12 +1,30 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+<!DOCTYPE html> 
+<html> 
+	<head> 
+	<title>Contact</title> 
 	
-	This is the contact page.
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js"></script>
+        <script type="text/javascript" src="../assets/js/doT.js"></script>
+        <script type="text/javascript" src="../assets/js/site.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+</head> 
+<body> 
+
+<div data-role="page" data-theme="b" id="home">
+        <div data-role="header" data-theme="b">
+            <h1>Contact</h1>
+        </div>
+        <div data-role="content">
+          <p> MacKenzie Kelly</p>
+		  <p> Williamson County Emergency Services</p>                         
+        </div>
+        <div data-role="footer" data-position="fixed">
+            <h1>&copy; Copyright Info or Site URL</h1>
+        </div>
+</div>
 
 </body>
 </html>
