--- a/pages/checklist.html
+++ b/pages/checklist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 	<head> 
-	<title>Page Title</title> 
+	<title>Preparedness Checklist</title> 
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 
@@ -21,13 +21,13 @@
             <div id="checklist-list">
                 <ul data-role="listview" data-theme="b">
                     {{each item in checklist}}
-                    <li><a href="acura.html">{{=item.label}}</a></li>
+                    <li><a href="#">{{=item.label}}</a></li>
                     {{/each}}                  
                 </ul>
             </div>
         </div>
         <div data-role="footer" data-position="fixed">
-            <h1>&copy; Copyright Info or Site URL</h1>
+            <h1>&copy; Copyright PreparingWilco</h1>
         </div>
 </div>
 
