--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 	<head> 
-	<title>Page Title</title> 
+	<title>Preparing Wilco</title> 
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 
@@ -15,13 +15,13 @@
 
 <div data-role="page" data-theme="b" id="home">
         <div data-role="header" data-theme="b">
-            <h1>My Site</h1>
+            <h1>Preparing Wilco</h1>
         </div>
         <div data-role="content">
-            <a href="index.html" >Home</a> 
+            <a href="home.html" >Home</a> 
             <a href="index.html" >Local</a>
             <a href="index.html" >My Plan</a>
-            <a href="index.html" >Checklist</a>
+            <a href="checklist.html" >Checklist</a>
             <a href="index.html" >Info</a>                                      
         </div>
         <div data-role="footer" data-position="fixed">
