--- a/pages/info.html
+++ b/pages/info.html
@@ -41,8 +41,9 @@
                     </ul>
                 </p>
             </div>
-            <!-- /content -->
+            <div data-role="footer" data-position="fixed">
+                <h1>&copy; Copyright Info or Site URL</h1>
+            </div>
         </div>
-        <!-- /page -->
     </body>
 </html>
