--- a/pages/home.html
+++ b/pages/home.html
@@ -5,10 +5,11 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+	<link rel="stylesheet" href="../assets/css/site.css" />
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js"></script>
-        <script type="text/javascript" src="../assets/js/doT.js"></script>
-        <script type="text/javascript" src="../assets/js/site.js"></script>
+    <script type="text/javascript" src="../assets/js/doT.js"></script>
+    <script type="text/javascript" src="../assets/js/site.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
 </head> 
 <body> 
@@ -18,11 +19,14 @@
             <h1>Preparing Wilco</h1>
         </div>
         <div data-role="content">
-            <a href="home.html" >Home</a> 
-            <a href="index.html" >Local</a>
-            <a href="index.html" >My Plan</a>
-            <a href="checklist.html" >Checklist</a>
-            <a href="info.html" >Info</a>                                      
+            <div class="dashboard">
+                <a href="index.html" class="main-btn">Home</a> 
+                <a href="index.html" class="main-btn">Local</a>
+                <a href="index.html" class="main-btn">My Plan</a>
+                <a href="index.html" class="main-btn">Checklist</a>
+                <a href="index.html" class="main-btn">Info</a>
+            </div>                        
+          
         </div>
         <div data-role="footer" data-position="fixed">
             <h1>&copy; Copyright Info or Site URL</h1>
