oops - put links back

--- a/pages/home.html
+++ b/pages/home.html
@@ -20,11 +20,11 @@
         </div>
         <div data-role="content">
             <div class="dashboard">
-                <a href="index.html" class="main-btn">Home</a> 
+                <a href="home.html" class="main-btn">Home</a> 
                 <a href="index.html" class="main-btn">Local</a>
                 <a href="index.html" class="main-btn">My Plan</a>
-                <a href="index.html" class="main-btn">Checklist</a>
-                <a href="index.html" class="main-btn">Info</a>
+                <a href="checklist.html" class="main-btn">Checklist</a>
+                <a href="info.html" class="main-btn">Info</a>
             </div>                        
           
         </div>
