--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,7 @@
         <title>About</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+        <link rel="stylesheet" href="../assets/css/site.css" />
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js">
         </script>
         <script type="text/javascript" src="../assets/js/doT.js">
