added a header nav bar

--- a/pages/checklist.html
+++ b/pages/checklist.html
@@ -15,6 +15,25 @@
 
 <div data-role="page" data-theme="b" id="checklist">
         <div data-role="header" data-theme="b">
+            <div data-role="navbar">
+                <ul>
+                    <li>
+                        <a href="home.html">Home</a> 
+                    </li>
+                    <li>
+                        <a href="ready.html">Be Ready</a>
+                    </li>
+                    <li>
+                        <a href="local.html">Local</a>
+                    </li>
+                    <li>
+                        <a href="optin.html">Opt-In</a>
+                    </li>
+                    <li>
+                        <a href="info.html">Info</a>
+                    </li>
+                </ul>
+            </div>
             <h1>Checklist</h1>
         </div>
         <div data-role="content">
@@ -27,7 +46,6 @@
             </div>
         </div>
         <div data-role="footer" data-position="fixed">
-            <h1>&copy; Copyright PreparingWilco</h1>
         </div>
 </div>
 
