--- a/pages/info.html
+++ b/pages/info.html
@@ -15,25 +15,54 @@
     <body>
         <div data-role="page">
             <div data-role="header">
+            <div data-role="navbar">
+                <ul>
+                    <li>
+                        <a href="home.html">Home</a> 
+                    </li>
+                    <li>
+                        <a href="ready.html">Be Ready</a>
+                    </li>
+                    <li>
+                        <a href="local.html">Local</a>
+                    </li>
+                    <li>
+                        <a href="optin.html">Opt-In</a>
+                    </li>
+                    <li>
+                        <a href="info.html">Info</a>
+                    </li>
+                </ul>
+            </div>
                 <h1>Williamson County Emergency Notification</h1>
             </div>
             <div data-role="content">
                 <p>
-                    <ul data-role="listview" data-inset="true" data-filter="true">
+                    <ul data-role="listview" data-inset="true">
+                        
+                        <li data-role="list-divider">
+                            Preparing Wilco Information
+                        </li>
                         <li>
                             <a href="about.html">About</a>
                         </li>
                         <li>
                             <a href="contact.html">Contact</a>
                         </li>
-                        <li>
-                            <a href="#">Get Ready Blog</a>
+                        <li data-role="list-divider">
+                            Be Connected
                         </li>
                         <li>
-                            <a href="#">Facebook</a>
+                            <a href="#">Be Ready Blog</a>
                         </li>
                         <li>
-                            <a href="#">Twitter</a>
+                            <a rel="external" href="http://facebook.com/preparingwilco">Facebook</a>
+                        </li>
+                        <li>
+                            <a rel="external" href="http://twitter.com/wilcoalerts">Wilco Alerts Twitter</a>
+                        </li>
+                        <li>
+                            <a rel="external" href="http://twitter.com/preparingwilco">Preparing Wilco Twitter</a>
                         </li>
                         <li>
                             <a href="#">News</a>
@@ -42,7 +71,6 @@
                 </p>
             </div>
             <div data-role="footer" data-position="fixed">
-                <h1>&copy; Copyright Info or Site URL</h1>
             </div>
         </div>
     </body>
