--- a/pages/local.html
+++ b/pages/local.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 	<head> 
-	<title>Preparing Wilco</title> 
+	<title>Local Information</title> 
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 
@@ -35,7 +35,7 @@
                     </li>
                 </ul>
             </div>
-            <h1>Preparing Wilco</h1>
+            <h1>Local Information</h1>
         </div>
         <div data-role="content">
             <div class="dashboard">
