aded nav bar and google maps integration

--- a/pages/optin.html
+++ b/pages/optin.html
@@ -37,10 +37,13 @@
             <h1>Get Notifed!</h1>
         </div>
         <div data-role="content">
-            <div data-role="field-contain">
-                <label for="basic">Email address:</label>
-                <input type="text" name="email" id="basic" value=""  />
-            </div>
+            <form method="post" action="">
+                <div data-role="field-contain">
+                    <label for="basic">Email address:</label>
+                    <input type="text" name="email" id="basic" value=""  />
+                </div>
+                <button value="submit-value" name="submit" data-theme="b" type="submit" aria-disabled="false">Submit</button>
+            </form>
         </div>
         <div data-role="footer" data-position="fixed">
         </div>
