added in Ben's theme

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,8 @@
     <head>
         <title>Contact</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+        <link rel="stylesheet" href="../assets/css/wilco.min.css" />
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0rc2/jquery.mobile.structure-1.0rc2.min.css" />
         <link rel="stylesheet" href="../assets/css/site.css" />
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js">
         </script>
