--- a/pages/ready.html
+++ b/pages/ready.html
@@ -5,8 +5,9 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 
-	<link rel="stylesheet" href="../assets/css/site.css" />
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+	<link rel="stylesheet" href="../assets/css/wilco.min.css" />
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0rc2/jquery.mobile.structure-1.0rc2.min.css" />
+    <link rel="stylesheet" href="../assets/css/site.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js"></script>
     <script type="text/javascript" src="../assets/js/doT.js"></script>
     <script type="text/javascript" src="../assets/js/site.js"></script>
