a few minor tweaks

--- a/pages/local.html
+++ b/pages/local.html
@@ -40,11 +40,7 @@
         </div>
         <div data-role="content">
             <div class="dashboard">
-                <a href="local-contacts.html" class="main-btn">Local Contacts</a> 
-                <a href="ready.html" class="main-btn">Be Ready</a>
-                <a href="local.html" class="main-btn">Local</a>
-                <a href="optin.html" class="main-btn">Opt-In</a>
-                <a href="info.html" class="main-btn">Info</a>
+                <a href="local-contacts.html" class="main-btn" rel="external">Contacts</a> 
             </div>                        
           
         </div>
