--- a/pages/optin.html
+++ b/pages/optin.html
@@ -41,8 +41,16 @@
         <div data-role="content">
             <form method="post" action="">
                 <div data-role="field-contain">
-                    <label for="basic">Email address:</label>
+                    <label for="basic">Email Address:</label>
                     <input type="text" name="email" id="basic" value=""  />
+                </div>
+                <div data-role="field-contain">
+                    <label for="phone">Phone Number:</label>
+                    <input type="text" name="phone" id="phone" value=""  />
+                </div>
+                <div data-role="field-contain">
+                    <label for="twitter">Twitter Handle:</label>
+                    <input type="text" name="email" id="twitter" value=""  />
                 </div>
                 <button value="submit-value" name="submit" data-theme="b" type="submit" aria-disabled="false">Submit</button>
             </form>
