--- a/pages/ready.html
+++ b/pages/ready.html
@@ -40,8 +40,9 @@
         </div>
         <div data-role="content">
             <div class="dashboard">
-                <a href="checklist.html" class="main-btn">Checklist</a>
-                <a href="carlist.html" class="main-btn">Car Checklist</a> 
+                <a href="checklist.html" class="main-btn">Home Checklist</a>
+                <a href="carlist.html" class="main-btn">Car Checklist</a>
+                <a href="petlist.html" class="main-btn">Pet Checklist</a>
                 <a href="threats.html" class="main-btn">Threats</a>
                 <a href="local-contacts.html" class="main-btn">Local Contacts</a>
             </div> 
